--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "url": "https://github.com/AnomalyInnovations/serverless-nodejs-starter.git"
   },
   "devDependencies": {
+    "aws-sdk": "^2.547.0",
+    "jest": "^24.9.0",
     "serverless-bundle": "^1.2.5",
     "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3"
+    "serverless-offline": "^5.12.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "stripe": "^7.10.0"
+  }
 }
